--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -121,7 +121,7 @@ header .intro-text .objective-statement {
 
 @media (min-width: 768px) {
     header .container {
-        padding-top: 200px;
+        padding-top: 150px;
         padding-bottom: 20px;
     }
 
@@ -146,6 +146,7 @@ header .intro-text .objective-statement {
     font-weight: 400;
     text-transform: uppercase;
     border: 0px;
+    min-height: 40px;
 }
 
 .navbar-custom a:focus {
@@ -217,7 +218,8 @@ header .intro-text .objective-statement {
 
 @media (min-width: 768px) {
     .navbar-custom {
-        padding: 15px 0;
+        padding: 10px 0;
+        min-height: 40px;
         -webkit-transition: all ease 0.5s;
         -moz-transition: all ease 0.5s;
         transition: all ease 0.5s;
@@ -254,7 +256,7 @@ section {
 
 section h2 {
     margin: 0;
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 section.success {
