--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -539,8 +539,8 @@ article h4 {
     font-weight: 400;
     text-align: left;
     padding-bottom: 0;
-    margin-bottom: 0;
-    margin-top: 2em;
+    margin-bottom: 0.5em;
+    margin-top: 1em;
 }
 
 article .table {
