--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -100,14 +100,14 @@ header img {
 
 header .intro-text .headline {
     display: block;
-    font-family: "Merriweather", serif;
+    font-family: "Voces", serif;
     text-transform: none;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 header .intro-text .bio {
-    font-size: 1.25em;
-    line-height: 1.7em;
+    font-size: 1em;
+    line-height: 1.5em;
     font-family: "Merriweather", serif;
     text-align: left;
 }
@@ -135,6 +135,7 @@ header .intro-text .bio {
     header .intro-text .bio {
         font-size: 1.25em;
         font-family: "Merriweather", serif;
+        font-weight: 400;
         text-align: left;
     }
 }
@@ -156,7 +157,7 @@ header .intro-text .bio {
 .navbar-custom .navbar-brand {
     color: black;
     text-transform: none;
-    font-family: "Merriweather", serif;
+    font-family: "Voces", serif;
     font-weight: 500;
 }
 
@@ -175,6 +176,7 @@ header .intro-text .bio {
     color: black;
     font-weight: 400;
     font-size: 110%;
+    font-family: "Voces", serif;
     transition: all ease 0.5s;
 }
 
@@ -260,7 +262,7 @@ section {
 
 section h2 {
     margin: 0;
-    font-size: 2.5em;
+    font-size: 2em;
 }
 
 section.success {
@@ -268,41 +270,92 @@ section.success {
     color: black;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     section {
-        padding: 75px 0;
+        padding: 10px 0;
     }
 
     section.first {
-        padding-top: 75px;
+        padding-top: 1  0px;
     }
+}
+
+#categorizer {
+    padding-top: 20px;
+}
+
+#categorizer li{
+    margin: 5px;
+    line-height: 2.5em;
+    min-width: 5em;
+    border: 1px solid #9a9a9a;
+    text-align: center;
+    border-radius: 5px;
+    font-family: "Voces", serif;
+    font-size: 1.25em;
+    transition: all ease 0.3s;
+    color: #7a7a7a;
+    cursor: pointer;
+}
+
+#categorizer li:hover{
+    background: #3dbee2 !important;
+    border: 1px solid #3dbee2 !important;
+    color: snow !important;
 }
 
 .portfolio h2 {
     padding-top: 30px;
     font-family: "Voces", serif;
 }
-.portfolio .portfolio-item {
-    margin: 15px;
-    right: 0;
+
+.portfolio .item-wrapper {
+     padding: 8px;
 }
 
+.portfolio .portfolio-item {
+    border-radius: 3px;
+    box-shadow: 0px 0px 3px #adadad;
+    transition: all ease 0.3s;
+
+    display: block;
+    position: relative;
+    
+    margin: 0 auto;
+}
+
+.portfolio .portfolio-item:hover {
+    box-shadow: 0px 0px 15px #adadad;
+}
+
+.portfolio .portfolio-item img{
+    border-radius: 3px 3px 0 0;
+}
+
+/*
 .portfolio .portfolio-item .portfolio-link {
     display: block;
     position: relative;
     max-width: 400px;
     margin: 0 auto;
 }
+*/
 
 .portfolio .portfolio-item .portfolio-title {
     width: 100%;
-    font-family: "Merriweather", serif;
+    font-family: "Voces", serif;
     font-size: 120%;
     text-align: center;
-    min-height: 50px;
+    margin: 0;
+    padding: 15px 0;
 }
 
-.portfolio .portfolio-item .portfolio-link .caption {
+.portfolio .portfolio-item .portfolio-intro {
+    display: none
+}
+
+/*
+.portfolio .portfolio-item .caption {
     background-color: rgba(73, 73, 73, 0.95);
     position: absolute;
     width: 100%;
@@ -313,11 +366,11 @@ section.success {
     -moz-transition: all ease 0.5s;
 }
 
-.portfolio .portfolio-item .portfolio-link .caption:hover {
+.portfolio .portfolio-item .caption:hover {
     opacity: 1;
 }
 
-.portfolio .portfolio-item .portfolio-link .caption .caption-content {
+.portfolio .portfolio-item .caption .caption-content {
     position: absolute;
     width: 100%;
     height: 20px;
@@ -328,14 +381,15 @@ section.success {
     color: white;
 }
 
-.portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+.portfolio .portfolio-item .caption .caption-content i {
     margin-top: -12px;
 }
 
-.portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-.portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+.portfolio .portfolio-item .caption .caption-content h3,
+.portfolio .portfolio-item .caption .caption-content h4 {
     margin: 0;
 }
+*/
 
 .portfolio * {
     z-index: 2;
