--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -711,6 +711,8 @@ article figcaption {
 /* BLOG */
 #blog h2 {
     margin-top: 100px;
+    font-size: 2.5em;
+    font-family: "Voces", serif;
 }
 
 #blog .post-card {
@@ -748,9 +750,9 @@ article figcaption {
 }
 
 #blog .post-card .post-title {
-    font-family: "Merriweather", serif;
+    font-family: "Voces", serif;
     font-weight: 500;
-    font-size: 180%;
+    font-size: 1.5em;
     padding-top: 5px;
     padding-bottom: 5px;
 }
@@ -759,7 +761,7 @@ article figcaption {
     font-family: "Merriweather", serif;
     font-weight: 400;
     font-style: italic;
-    font-size: 100%;
+    font-size: 1em;
     color: grey;
     padding-top: 0px;
     padding-bottom: 15px;
@@ -767,7 +769,7 @@ article figcaption {
 
 #blog .post-card .post-intro {
     font-family: "Hind", sans-serif;
-    font-size: 120%;
+    font-size: 1.1em;
 }
 
 #blog a {
